<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/idBack"
    android:background="#ffd4e1ff">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtValorFinanciamento"
        android:layout_marginBottom="64dp"
        android:inputType="number|numberDecimal"
        android:hint="@string/txtValorFinanciamento"
        android:layout_above="@+id/txtNumeroMeses"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtNumeroMeses"
        android:inputType="number"
        android:hint="@string/txtNumeroMeses"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtTaxaJuros"
        android:inputType="number"
        android:hint="@string/txtJuros"
        android:layout_below="@+id/txtNumeroMeses"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="69dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCalcular"
        android:id="@+id/btnCalcular"
        android:onClick="calcular"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtLogo"
        android:id="@+id/txtLogo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="40dp"
        android:textColor="#ff6398ff" />
</RelativeLayout>
